Fix overlapping map control buttons

--- a/static/css/poi_recommendation_system.css
+++ b/static/css/poi_recommendation_system.css
@@ -6184,7 +6184,7 @@ ute Preview Map Styles */
 
 .map-controls {
     position: absolute;
-    top: 10px;
+    top: 60px;
     right: 10px;
     display: flex;
     flex-direction: column;
